--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Norteks from "../assets/img/logo.svg";
 			<button class="-button">Оставить заявку</button>
 		</div>
 	</div>
-	<Categories client:only showEmail={false} />
+
 	<div class="container disable-bottom">
 		<div class="text xl">
 			НОРТЕКС - ЭТО СОВРЕМЕННАЯ КОМПАНИЯ, ОСНОВНОЙ ДЕЯТЕЛЬНОСТЬЮ КОТОРОЙ
@@ -34,25 +34,29 @@ import Norteks from "../assets/img/logo.svg";
 			Основная философия нашей компании: ткани — это не только элемент
 			интерьера, но и имидж, стиль и атрибут высокой моды
 		</div>
-		<div class="text s">
-			«В этом мире нет почти ничего, что бы кто-нибудь не смог бы сделать
-			немножко похуже и продать немножко подешевле, и люди,
-			ориентирующиеся только на цену, становятся заслуженной добычей
-			подобных дельцов.»
+		<Categories client:only showEmail={false} />
+		<div class="container">
+			<div class="text s">
+				«В этом мире нет почти ничего, что бы кто-нибудь не смог бы
+				сделать немножко похуже и продать немножко подешевле, и люди,
+				ориентирующиеся только на цену, становятся заслуженной добычей
+				подобных дельцов.»
+			</div>
+			<div class="text s">
+				«Глупо платить слишком много, но еще хуже платить слишком мало.
+				Если вы платите слишком много, вы теряете какую-то сумму. И всё.
+				Если же вы платите слишком мало, то иногда вы теряете все,
+				потому что купленная вещь не может выполнить своей задачи.»
+			</div>
+			<div class="text s">
+				«Законы экономики не позволяют получить что-то ценное задёшево.
+				Если вы решаетесь в пользу самого дешевого предложения, вы
+				должны учитывать и риск, на который вы идёте. А если вы на него
+				идете, то у вас достаточно денег, чтобы заплатить и за
+				что-нибудь получше».
+			</div>
+			<i> Джон Раскин (1819-1900) </i>
 		</div>
-		<div class="text s">
-			«Глупо платить слишком много, но еще хуже платить слишком мало. Если
-			вы платите слишком много, вы теряете какую-то сумму. И всё. Если же
-			вы платите слишком мало, то иногда вы теряете все, потому что
-			купленная вещь не может выполнить своей задачи.»
-		</div>
-		<div class="text s">
-			«Законы экономики не позволяют получить что-то ценное задёшево. Если
-			вы решаетесь в пользу самого дешевого предложения, вы должны
-			учитывать и риск, на который вы идёте. А если вы на него идете, то у
-			вас достаточно денег, чтобы заплатить и за что-нибудь получше».
-		</div>
-		<i> Джон Раскин (1819-1900) </i>
 	</div>
 </BaseLayout>
 
