--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -57,7 +57,7 @@ const currentPath = Astro.url.pathname;
 			</div>
 			<div class="-contacts">
 				<div class="-text">Дмитровское шоссе 71Б 7ONE</div>
-				<div class="-text">+7 (495) 221-33 - 16</div>
+				<div class="-text">+7 (495) 221 - 33 - 16</div>
 				<div class="-text">+7 (903) 797 - 55 - 76</div>
 			</div>
 		</div>
