--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,21 +18,18 @@ import Norteks from "../assets/img/logo.svg";
 
 	<div class="container disable-bottom">
 		<div class="text xl">
-			НОРТЕКС - ЭТО СОВРЕМЕННАЯ КОМПАНИЯ, ОСНОВНОЙ ДЕЯТЕЛЬНОСТЬЮ КОТОРОЙ
-			ЯВЛЯЕТСЯ ПРОДАЖА МЕБЕЛЬНЫХ ТКАНЕЙ ОТ ВЕДУЩИХ МИРОВЫХ ПРОИЗВОДИТЕЛЕЙ.
-			МЫ ЗАЯВЛЯЕМ О СЕБЕ КАК О СИЛЬНОЙ, УСПЕШНОЙ КОМПАНИИ С НАДЕЖНОЙ
-			РЕПУТАЦИЕЙ, СПЕЦИАЛИСТЫ КОТОРОЙ ИМЕЮТ ОПЫТ РАБОТЫ В СФЕРЕ МЕБЕЛЬНЫХ
-			ТКАНЕЙ БОЛЕЕ 20 ЛЕТ.
+			НОРТЕКС предлагает широкий выбор высококачественных и
+			высокотехнологичных тканей от ведущих мировых производителей.
+			Уделяем особое внимание к соответствию цена/качество, предоставляем
+			ткани разных ценовых категорий, экологичных, износостойких, с
+			широким спектром цветов и применением новейших технологий при
+			производстве.
 		</div>
 		<div class="text">
-			Целью своей деятельности мы видим обеспечение производителей мягкой
-			мебели, дизайнеров интерьера современными качественными тканями,
-			богатой палитрой цветов, фактуры, позволяющие придать интерьеру дома
-			атмосферу уюта, комфорта и индивидуальности.
-		</div>
-		<div class="text">
-			Основная философия нашей компании: ткани — это не только элемент
-			интерьера, но и имидж, стиль и атрибут высокой моды
+			Команда НОРТЕКС уже более 20 лет на рынке мебельных тканей. Наша
+			главная задача - соответствовать высочайшим стандартам качества и
+			обслуживания, успешно реализовать даже самые сложные запросы
+			клиентов.
 		</div>
 		<Categories client:only showEmail={false} />
 	</div>
@@ -43,8 +40,8 @@ import Norteks from "../assets/img/logo.svg";
 		font-size: 20px;
 		line-height: 32px;
 		@media (max-width: 768px) {
-			line-height: 24px;
-			font-size: 14px;
+			line-height: 22px;
+			font-size: 12px;
 		}
 		&.s {
 			font-size: 16px;
@@ -54,7 +51,7 @@ import Norteks from "../assets/img/logo.svg";
 			font-size: 24px;
 			font-weight: 700;
 			@media (max-width: 768px) {
-				font-size: 16px;
+				font-size: 14px;
 			}
 		}
 	}
