--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -37,6 +37,8 @@ import { Image } from "astro:assets";
 		flex-wrap: wrap;
 		@media (max-width: 700px) {
 			padding: 20px 20px 80px 20px;
+			flex-direction: column;
+			align-items: flex-start;
 		}
 
 		.-text {
@@ -44,12 +46,21 @@ import { Image } from "astro:assets";
 			font-size: 16px;
 			&.s {
 				font-size: 14px;
+				@media (max-width: 768px) {
+					font-size: 12px;
+				}
 			}
 			&.m {
 				font-size: 18px;
+				@media (max-width: 768px) {
+					font-size: 15px;
+				}
 			}
 			&.l {
 				font-size: 20px;
+				@media (max-width: 768px) {
+					font-size: 17px;
+				}
 			}
 		}
 		.-logo {
