--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,8 @@ import Norteks from "../assets/img/logo.svg";
 		<div class="-container">
 			<Image src={Norteks} class="-img" alt="" />
 			<div class="-title">Стильный гардероб мягкой мебели</div>
-			<button class="-button">Оставить заявку</button>
+			<a class="text xl white">firma.nortex@gmail.com</a>
+			<!-- <button class="-button">Оставить заявку</button> -->
 		</div>
 	</div>
 
@@ -53,6 +54,9 @@ import Norteks from "../assets/img/logo.svg";
 			@media (max-width: 768px) {
 				font-size: 14px;
 			}
+		}
+		&.white {
+			color: #fff;
 		}
 	}
 	.home-image {
