--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -13,7 +13,7 @@ const currentPath = Astro.url.pathname;
 	<div class="-wrapper">
 		<div class="-container">
 			<a href="/">
-				<img src="/logo.svg" class="-logo" alt="" />
+				<img src="/logo.png" class="-logo" alt="" />
 			</a>
 			<div class="-links">
 				<a
