--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import Norteks from "../../assets/img/logo.svg";
+import Norteks from "../../assets/img/logo.png";
 import mail from "../../assets/img/icons/mail.svg";
 import phone from "../../assets/img/icons/phone.svg";
 import location from "../../assets/img/icons/location.svg";
@@ -8,7 +8,7 @@ import { Image } from "astro:assets";
 
 <footer class="footer">
 	<div class="-logo">
-		<Image src={Norteks} alt="" class="-img" />
+		<img src="/logo.png" alt="" class="-img" />
 		Стильный гардероб вашей мебели
 	</div>
 	<div class="-address">
