--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,7 +10,7 @@ import MobileMenu from "../components/layout/MobileMenu.astro";
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" href="/favicon.ico" sizes="any" type="image/svg+xml" />
+		<link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
 		<title>Norteks</title>
 	</head>
 </html>
