--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -1,5 +1,6 @@
 ---
-import Norteks from "../../assets/img/logo.svg";
+import location from "../../assets/img/icons/location.svg";
+import phone from "../../assets/img/icons/phone.svg";
 import instagram from "../../assets/img/icons/instagram.svg";
 import telegram from "../../assets/img/icons/telegram.svg";
 import whatsapp from "../../assets/img/icons/whatsapp.svg";
@@ -60,13 +61,21 @@ const currentPath = Astro.url.pathname;
 				<Image class="-img" src={whatsapp} alt="" />
 			</div>
 			<div class="-contacts">
-				<div class="-text">Дмитровское шоссе 71Б 7ONE</div>
-				<a class="-text link" href="tel:+7(495)2213316">
-					+7 (495) 221 - 33 - 16
-				</a>
-				<a class="-text link" href="tel:+7(903)7975576">
-					+7 (903) 797 - 55 - 76
-				</a>
+				<div class="-wrap">
+					<Image class="-img" src={location} alt="" />
+					<div class="-text">Дмитровское шоссе 71Б 7ONE</div>
+				</div>
+				<div class="-wrap">
+					<Image class="-img" src={phone} alt="" />
+					<div class="-phones">
+						<a class="-text link" href="tel:+7(495)2213316">
+							+7 (495) 221 - 33 - 16
+						</a>
+						<a class="-text link" href="tel:+7(903)7975576">
+							+7 (903) 797 - 55 - 76
+						</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -141,6 +150,7 @@ const currentPath = Astro.url.pathname;
 		.-contacts {
 			display: flex;
 			gap: 8px;
+			align-items: flex-start;
 			flex-direction: column;
 			@media (max-width: 768px) {
 				display: none;
@@ -152,6 +162,20 @@ const currentPath = Astro.url.pathname;
 						color: aquamarine;
 					}
 				}
+			}
+			.-wrap {
+				display: flex;
+				justify-content: center;
+				gap: 12px;
+				.-img {
+					width: 14px;
+					height: auto;
+				}
+			}
+			.-phones {
+				display: flex;
+				flex-direction: column;
+				gap: 8px;
 			}
 		}
 	}
