--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,11 @@ import Norteks from "../assets/img/logo.svg";
 		<div class="-container">
 			<Image src={Norteks} class="-img" alt="" />
 			<div class="-title">Стильный гардероб мягкой мебели</div>
-			<a class="text xl white">firma.nortex@gmail.com</a>
-			<!-- <button class="-button">Оставить заявку</button> -->
+			<button class="-button">
+				<a class="-text link" href="mailto:firma.nortex@gmail.com"
+					>Оставить заявку
+				</a>
+			</button>
 		</div>
 	</div>
 
