--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -93,6 +93,9 @@ const currentPath = Astro.url.pathname;
 		border: 0;
 		color: #fff;
 		height: 100px;
+		@media (max-width: 768px) {
+			height: 70px;
+		}
 		.-wrapper {
 			padding: 0 100px;
 			display: flex;
@@ -105,6 +108,9 @@ const currentPath = Astro.url.pathname;
 			gap: 10px;
 			@media (max-width: 1600px) {
 				padding: 0 10px;
+			}
+			@media (max-width: 768px) {
+				height: 70px;
 			}
 		}
 
@@ -120,6 +126,9 @@ const currentPath = Astro.url.pathname;
 			margin-top: 2px;
 			height: auto;
 			width: 120px;
+			@media (max-width: 768px) {
+				width: 110px;
+			}
 		}
 		.-links {
 			display: flex;
