--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -54,5 +54,8 @@ import MobileMenu from "../components/layout/MobileMenu.astro";
 		flex-direction: column;
 		align-items: center;
 		flex: 1;
+		@media (max-width: 768px) {
+			margin-top: 70px;
+		}
 	}
 </style>
