fixed phone number

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -23,6 +23,9 @@ import { Image } from "astro:assets";
 			<a class="-text l link" href="tel:+7(495)2213316">
 				+7 (495) 221 - 33 - 16
 			</a>
+			<a class="-text l link" href="tel:+7(903)2213316">
+				+7 (903) 221 - 33 - 16
+			</a>
 		</div>
 	</div>
 	<div class="-email">
