--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -68,6 +68,9 @@ const currentPath = Astro.url.pathname;
 						<a class="-text link" href="tel:+7(495)2213316">
 							+7 (495) 221 - 33 - 16
 						</a>
+						<a class="-text link" href="tel:+7(903)2213316">
+							+7 (903) 221 - 33 - 16
+						</a>
 					</div>
 				</div>
 				<div class="-wrap">
