--- a/src/pages/cleaning.astro
+++ b/src/pages/cleaning.astro
@@ -8,250 +8,179 @@ import "../main.css";
 ---
 
 <BaseLayout>
-	<div class="img-container">
-		<Image src={img3} class="-img" alt="" />
-		<Image src={img2} class="-img" alt="" />
-		<Image src={img1} class="-img" alt="" />
-	</div>
-	<div class="container offset">
-		<div class="wrapper">
-			<div>
-				<div class="-text">
-					Выбирая ткань для своей мягкой мебели, покупателю необходимо
-					обратить внимание на то в каких обстоятельствах будет
-					эксплуатироваться изделие: наличие в доме животных,
-					маленьких детей, определённых привычек, наличия аллергии,
-					массы тела пользователей, месторасположения и многого
-					другого. От этого зависит качество выбранной ткани и её
-					состав, длина ворса, устойчивость к УФ, устойчивость к
-					когтям животных, из натуральных или химических волокон и
-					т.д.
-				</div>
-				<div class="-text">
-					Исходя из этого для ухода за тканями существует достаточное
-					количество различных по составу чистящих средств.
-					Современные мебельные ткани, как правило содержащие в своём
-					составе различные химические волокна, являются очень прочным
-					и износостойким материалом. Поэтому дополнительной защитной
-					обработки не требуется (в большинстве своём дополнительная
-					обработка - это химические вещества), кроме тех мест где это
-					требуется по регламенту. В связи с этим, лучший
-					профилактический уход - это отсутствие такого с применением
-					химических веществ разрушающих структуру ткани.
-				</div>
+  <div class="img-container">
+    <Image src={img3} class="-img" alt="" />
+    <Image src={img2} class="-img" alt="" />
+    <Image src={img1} class="-img" alt="" />
+  </div>
+  
+  <div class="container offset">
+    <div class="content-wrapper">
+      <!-- Вступление -->
+      <section class="section-block intro">
+        <h2>Рекомендации по уходу за тканями</h2>
+        <div class="text-block">
+          <p>Выбирая ткань для своей мягкой мебели, покупателю необходимо обратить внимание на то в каких обстоятельствах будет эксплуатироваться изделие: наличие в доме животных, маленьких детей, определённых привычек, наличия аллергии, массы тела пользователей, месторасположения и многого другого. От этого зависит качество выбранной ткани и её состав, длина ворса, устойчивость к УФ, устойчивость к когтям животных, из натуральных или химических волокон и т.д.</p>
+          
+          <p>Исходя из этого для ухода за тканями существует достаточное количество различных по составу чистящих средств. Современные мебельные ткани, как правило содержащие в своём составе различные химические волокна, являются очень прочным и износостойким материалом. Поэтому дополнительной защитной обработки не требуется (в большинстве своём дополнительная обработка - это химические вещества), кроме тех мест где это требуется по регламенту. В связи с этим, лучший профилактический уход - это отсутствие такого с применением химических веществ разрушающих структуру ткани.</p>
+          
+          <p>Если же Вам всё-таки понадобилась чистка-уход за вашими изделиями, то рекомендуем Вам следующее:</p>
+        </div>
+      </section>
 
-				<div class="-text">
-					Если же Вам всё-таки понадобилась чистка-уход за вашими
-					изделиями, то рекомендуем Вам следующее:
-				</div>
+      <!-- Основные рекомендации -->
+      <section class="section-block recommendations">
+        <h3>РЕКОМЕНДАЦИЯ ПО ЧИСТКЕ И ЭКСПЛУАТАЦИИ ИЗДЕЛИЙ</h3>
+        
+        <div class="recommendations-grid">
+          <div class="recommendation-item">
+            <h4>Регулярный уход</h4>
+            <p>- Если Вам необходимо очистить изделие от бытовой пыли и сухих частей, используйте сухую мягкую щётку.</p>
+            <p>- Категорически запрещается использовать пылесос и другие вакуумные устройства для чистки мягкой мебели. Вакуум способен вытягивать волокна ткани и «валять» поверхность. То есть на поверхности ткани будут образовываться шарики, так называемый пилинг. Кроме того, могут вытягиваться волокна основы ткани и волокна нетканых материалов наполнителей, расположенные непосредственно под тканью. Это ещё более ускоряет эффект старения ткани. Возможно также отслоение уточного слоя от основы в некоторых видах ткани.</p>
+          </div>
 
-				<div class="-text">
-					РЕКОМЕНДАЦИЯ ПО ЧИСТКЕ И ЭКСПЛУАТАЦИИ ИЗДЕЛИЙ
-				</div>
+          <div class="recommendation-item">
+            <h4>Запрещенные методы чистки</h4>
+            <p>- Строго запрещается использование отбеливателей, бензина, ацетона, уайт-спирита, растворителей, абразивных кислотосодержащих чистящих средств бытовой химии.</p>
+            <p>- Запрещается использовать для чистки скребки, острые предметы, губки с жёстким шершавым покрытием.</p>
+            <p>- Запрещается проводить по поверхности ткани острыми (режущими) предметами.</p>
+          </div>
 
-				<div class="-text">
-					- Если Вам необходимо очистить изделие от бытовой пыли и
-					сухих частей, используйте сухую мягкую щётку.
-				</div>
+          <div class="recommendation-item">
+            <h4>Удаление пятен</h4>
+            <p>- Очищать поверхность следует сразу после появления загрязнения. Если это жидкость, то необходимо собрать жидкость с помощью сухой, хорошо впитывающей жидкость мягкой тканью или губкой. Затем слегка влажной мягкой тканью пробуем собрать пятно от края к центру или по ворсу ткани. Возможно использование нейтрального бесцветного мыла. Не тереть!!! После этого, промокнуть место обработки сухой, мягкой тканью.</p>
+            <p>- Если источником загрязнения являются пасты (кетчуп, соус, йогурт...), то сначала необходимо собрать их с поверхности мягкой тряпкой без усилий, чтобы не загнать их в структуру ткани.</p>
+          </div>
+        </div>
+      </section>
 
-				<div class="-text">
-					- Категорически запрещается использовать пылесос и другие
-					вакуумные устройства для чистки мягкой мебели. Вакуум
-					способен вытягивать волокна ткани и «валять» поверхность. То
-					есть на поверхности ткани будут образовываться шарики, так
-					называемый пилинг. Кроме того, могут вытягиваться волокна
-					основы ткани и волокна нетканых материалов наполнителей,
-					расположенные непосредственно под тканью. Это ещё более
-					ускоряет эффект старения ткани. Возможно также отслоение
-					уточного слоя от основы в некоторых видах ткани.
-				</div>
+      <!-- Стирка и уход -->
+      <section class="section-block washing">
+        <h3>Стирка и дополнительный уход</h3>
+        <div class="text-block">
+          <p>- Некоторые ткани допускают стирку. Стирка должна производиться при температуре до 30*С без или с применением моющего средства, не содержащего отбеливатели. Не допускать отжим или выкручивание выстиранных деталей.</p>
+          <p>- Сушка должна производиться при комнатной температуре без воздействия прямых солнечных лучей.</p>
+          <p>- Гладить ткань допускается с изнаночной стороны утюгом с температурой обозначенной одной точкой. Некоторые ткани допускают температуру с двумя точками.</p>
+        </div>
+      </section>
 
-				<div class="-text">
-					- Строго запрещается использование отбеливателей, бензина,
-					ацетона, уайт-спирита, растворителей, абразивных
-					кислотосодержащих чистящих средств бытовой химии.
-				</div>
-
-				<div class="-text">
-					- Запрещается использовать для чистки скребки, острые
-					предметы, губки с жёстким шершавым покрытием.
-				</div>
-
-				<div class="-text">
-					- Не рекомендуется размещать на мягкой мебели чехлы,
-					покрывала из жёсткой ткани. Их жёсткая тыльная сторона может
-					повредить лицевую сторону обивочной ткани.
-				</div>
-
-				<div class="-text">
-					- Запрещается проводить по поверхности ткани острыми
-					(режущими) предметами.
-				</div>
-
-				<div class="-text">
-					- Очищать поверхность следует сразу после появления
-					загрязнения. Если это жидкость, то необходимо собрать
-					жидкость с помощью сухой, хорошо впитывающей жидкость мягкой
-					тканью или губкой. Затем слегка влажной мягкой тканью
-					пробуем собрать пятно от края к центру или по ворсу ткани.
-					Возможно использование нейтрального бесцветного мыла. Не
-					тереть!!! После этого, промокнуть место обработки сухой,
-					мягкой тканью. Если обрабатываемая ткань ворсовая, то после
-					полного высыхания возможна обработка мягкой щёткой, чтобы
-					ворс приобрёл прежний вид и направленность.
-				</div>
-
-				<div class="-text">
-					- Если источником загрязнения являются пасты (кетчуп, соус,
-					йогурт...), то сначала необходимо собрать их с поверхности
-					мягкой тряпкой без усилий, чтобы не загнать их в структуру
-					ткани. Далее предлагаем повторить процедуру по удалению
-					жидкостей.
-				</div>
-
-				<div class="-text">
-					- Не рекомендуется замывать загрязненный участок большим
-					количеством воды, во избежание повреждения наполнителей и
-					образования разводов на ткани.
-				</div>
-
-				<div class="-text">
-					- Рекомендуется избегать попадания влаги и грязи на стыки и
-					швы деталей, внутренние участки изделия.
-				</div>
-
-				<div class="-text">
-					- Большинство производителей тканей рекомендуют для чистки
-					пользоваться услугами профессиональной СУХОЙ чистки.
-				</div>
-
-				<div class="-text">
-					Для чистки небольших поверхностей рекомендуем использовать
-					СПЕЦИАЛЬНЫЕ средства для чистки мебельных тканей (для
-					различных по составу тканей - различные составы) путём
-					нанесения на пятно и немного вокруг и в течение 3-5 мин
-					убрать остатки грязи и моющего средства с помощью
-					увлажненной тканевой салфетки. При этом не забудьте
-					проверить воздействие средства на цвет ткани на невидимом
-					участке изделия.
-				</div>
-
-				<div class="-text">
-					- Некоторые ткани допускают стирку. Стирка должна
-					производиться при температуре до 30*С без или с применением
-					моющего средства, не содержащего отбеливатели. Не допускать
-					отжим или выкручивание выстиранных деталей.
-				</div>
-
-				<div class="-text">
-					- Сушка должна производиться при комнатной температуре без
-					воздействия прямых солнечных лучей.
-				</div>
-
-				<div class="-text">
-					- Гладить ткань допускается с изнаночной стороны утюгом с
-					температурой обозначенной одной точкой. Некоторые ткани
-					допускают температуру с двумя точками.
-				</div>
-
-				<div class="-text">
-					- К Вашему сведению информируем, что постиранные детали
-					могут иметь более светлый оттенок, чем до стирки и иметь
-					усадку в размере 2-4%.
-				</div>
-
-				<div class="-text">
-					Все съёмные чехлы имеющие липучку должны при стирке получить
-					защиту липучей поверхности, во избежание повреждения лицевой
-					поверхности ткани.
-				</div>
-
-				<div class="-text">
-					- Но большинство рекомендаций относятся к СУХОЙ
-					профессиональной чистке как самой эффективной и безопасной.
-				</div>
-
-				<div class="-text">
-					- Ткани велюровые, из синели, петельного прядения более
-					деликатны, но и более подвержены загрязнению, благодаря
-					своей глубокой структуре, по сравнению с гладко- или
-					коротковорсовыми тканями из химических волокон.
-				</div>
-
-				<div class="-text">
-					- Не рекомендуется размещать предметы мягкой мебели рядом с
-					отопительными приборами, рядом с мокрыми стенами, под прямым
-					воздействием солнечных лучей во избежание изменения цвета
-					тканей.
-				</div>
-
-				<div class="-text">
-					- Возникновение небольшого пилинга является естественным
-					эффектом от использования изделия из тканей и полностью
-					устранить не представляется возможным. Процесс удаления
-					пилинга аналогичен принципу для обработки верхней одежды.
-				</div>
-
-				<div class="-text">
-					- Возникновение незначительной волнистости на поверхности
-					сидений является естественным эффектом растяжения тканей под
-					воздействием тяжести тела, и не рассматривается как дефект.
-				</div>
-
-				<div class="-text">
-					- Компания «Нортекс» не несет ответственности за ущерб,
-					возникший в результате неправильного использования и ухода
-					за предлагаемыми обивочными тканями.
-				</div>
-
-				<div class="-text">
-					- Материалы, содержащие сильные красящие пигменты, могут
-					красить, особенно в начальной фазе их использования (джинс,
-					печать и т.п.).
-				</div>
-
-				<div class="-text">
-					- Компания «Нортекс» не несёт ответственности за неправильно
-					выбранный вид пошива ткани, модели мебельного чехла не
-					соответствующую техническим характеристикам ткани. Перед
-					началом производства, рекомендуем сделать попытку правильно
-					подобрать шов, нитку, иглу.
-				</div>
-
-				<div class="-text">
-					- Компания «Нортекс» рада оказать Вам техническую поддержку
-					и предоставить рекомендации и инструкции производителей о
-					порядке и области применения тканей, предлагаемых нами.
-				</div>
-			</div>
-		</div>
-	</div>
+      <!-- Важные примечания -->
+      <section class="section-block notes">
+        <h3>Важная информация</h3>
+        <div class="text-block">
+          <p>- Компания «Нортекс» не несет ответственности за ущерб, возникший в результате неправильного использования и ухода за предлагаемыми обивочными тканями.</p>
+          <p>- Материалы, содержащие сильные красящие пигменты, могут красить, особенно в начальной фазе их использования (джинс, печать и т.п.).</p>
+          <p>- Компания «Нортекс» рада оказать Вам техническую поддержку и предоставить рекомендации и инструкции производителей о порядке и области применения тканей, предлагаемых нами.</p>
+        </div>
+      </section>
+    </div>
+  </div>
 </BaseLayout>
 
-<style scoped>
-	.-text {
-		font-size: 15px;
-		max-width: 1300px;
-		margin-top: 10px;
-		@media (max-width: 700px) {
-			font-size: 12px;
-		}
-	}
-	.wrapper {
-		display: flex;
-		align-items: center;
-		flex-direction: column;
-		gap: 6px;
-		width: 1fr;
-	}
-	.img-container {
-		width: 100%;
-		display: flex;
-		justify-content: space-between;
-		margin: 20px 0 10px 0;
-		.-img {
-			max-height: 18vw;
-			width: auto;
-		}
-	}
+<style>
+  .container {
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+
+  .content-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+  }
+
+  .section-block {
+    background: #fff;
+    padding: 30px;
+    /* border-radius: 8px; */
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  }
+
+  h2 {
+    font-size: 28px;
+    color: #333;
+    margin-bottom: 16px;
+    padding-bottom: 10px;
+  }
+
+  h3 {
+    font-size: 22px;
+    color: #444;
+    margin-bottom: 20px;
+  }
+
+  h4 {
+    font-size: 18px;
+    color: #666;
+    margin-bottom: 15px;
+  }
+
+  .text-block {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .text-block p {
+    font-size: 15px;
+    line-height: 1.6;
+    color: #555;
+	margin: 5px 0;
+
+  }
+
+  .recommendations-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 30px;
+    margin-top: 20px;
+  }
+
+  .recommendation-item {
+    /* background: #fafafa; */
+    padding: 20px;
+
+    border-left: 5px solid #B8995E;
+  }
+
+  .img-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0 40px 0;
+  }
+
+  .-img {
+    max-height: 18vw;
+    width: auto;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  }
+
+  @media (max-width: 768px) {
+    .section-block {
+      padding: 20px;
+    }
+
+    h2 {
+      font-size: 24px;
+    }
+
+    h3 {
+      font-size: 20px;
+    }
+
+    h4 {
+      font-size: 16px;
+    }
+
+    .text-block p {
+      font-size: 14px;
+    }
+
+    .recommendations-grid {
+      grid-template-columns: 1fr;
+    }
+  }
 </style>
