--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -51,6 +51,12 @@ const currentPath = Astro.url.pathname;
 						? "-link active"
 						: "-link "}>Контакты</a
 				>
+				<a
+					href="/about-us"
+					class={currentPath === "/about-us/"
+						? "-link active"
+						: "-link "}>О нас</a
+				>
 			</div>
 		</div>
 
