--- a/src/pages/cleaning.astro
+++ b/src/pages/cleaning.astro
@@ -94,7 +94,8 @@ import "../main.css";
     background: #fff;
     padding: 30px;
     /* border-radius: 8px; */
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 0 20px rgba(0,0,0,0.07);
+
   }
 
   h2 {
@@ -141,7 +142,7 @@ import "../main.css";
     /* background: #fafafa; */
     padding: 20px;
 
-    border-left: 5px solid #B8995E;
+    border-left: 5px solid rgb(172, 172, 172);
   }
 
   .img-container {
@@ -154,7 +155,6 @@ import "../main.css";
   .-img {
     max-height: 18vw;
     width: auto;
-    border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   }
 
