--- a/src/main.css
+++ b/src/main.css
@@ -8,6 +8,9 @@
 		padding: 16px 5px;
 		width: 96%;
 	}
+	&.min {
+	 	max-width: 1200px;
+	}
 	&.offset {
 		gap: 16px;
 		@media (max-width: 768px) {
@@ -189,7 +192,7 @@ swiper-container {
 .product-list {
 	display: grid;
 	width:100%;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
 	gap: 20px;
 	margin-top: 20px;
 	@media (max-width: 1024px) {
@@ -202,6 +205,16 @@ swiper-container {
 		grid-template-columns: 1fr 1fr 1fr 1fr;
 		@media (max-width: 1200px) {
 			grid-template-columns: 1fr 1fr;
+		}
+	}
+	&.colors {
+		/* grid-template-columns: repeat(auto-fill, minmax(380px, 1fr)); */
+		grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+		gap: 10px;
+
+		@media (max-width: 1200px) {
+			grid-template-columns: 1fr 1fr 1fr;
+			gap: 5px;
 		}
 	}
 	.-item {
