--- a/src/pages/about-us.astro
+++ b/src/pages/about-us.astro
@@ -15,32 +15,19 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         <div class="grid">
           <div class="text-content">
             <p class="lead">
-              Компания Valencia занимается текстилем уже более 7 лет. Наши клиенты 
-              это салоны штор, архитектурные бюро, частные дизайнеры и компании 
-              занимающиеся оснащением отелей, гостиниц и общественных объектов.
+              Компания Нортекс в индустрии более 20 лет и заслужила доверие клиентов. Имеем большой опыт работы с крупными производствами, частные дизайнерами и декораторами, дизайнерскими студиями, архитектурными бюро, а также участвовать в выполнении государственных заказов. 
             </p>
 
             <div class="specialization">
               <p>
-                Наша компания специализируется на продаже тканей для штор, скатертных 
-                и негорючих тканей, а также аксессуаров для штор, таких, как шторная лента, кисти, 
-                подхваты, декоративные шнуры и бахрома. Часть продукции мы создаем совместно 
-                с фабриками, имеем эксклюзивные права на продажу этих дизайнов в России и 
-                держим ткани в наличии на нашем складе в Москве, что позволяет нам совершать 
-                отгрузки тканей в течение одного двух дней и продавать ткани метражом от одного 
-                метра.
+                Предлагаем широких выбор тканей для мебели и штор: велюр, замша, микрофибра, экокожа, рогожка, негорючие ткани, мировые тренды, уличные ткани outdoor, Trevira CS с нитью из полиэстера, шенилл, ткани с рисунком, букле, шерсть, лен, хлопок, бархат, мех, ткани с сертификатом AVIO/IMO, блэкаут, тюль и многие другие в широком цветовом диапазоне.
+                Работаем как на заказ, так и с тканями в наличии на нашем складе в Москве. Обеспечиваем гибкую доставку в зависимости от запросов и нужд клиента, продаем рулонами или в необходимом метраже под индивидуальный заказ. Прилагаем все усилия чтобы обеспечить доставку как можно быстрее по приятным ценам.
               </p>
             </div>
 
             <div class="custom-order">
               <p>
-                С какими-то коллекциями мы работаем под заказ, 
-                и возим нужный метраж из Европы под конкретный заказ клиента. 
-                Помимо этого, мы представляем несколько Европейских фабрик на Российском 
-                рынке на правах агента. То есть мы продаем ткани напрямую с фабрик рулонами 
-                для оптовиков и салонов штор держащих склад по ценам фабрик, имея от них лишь 
-                стандартное комиссионное вознаграждение, никак не отражающееся 
-                на цене продукции.
+                Торгуем только высококачественными и высокотехнологичными тканями с гарантией качества и безопасности в использовании, что подтверждает наше многолетнее и плодотворное сотрудничество с клиентами по всей России. Являемся регулярными участниками текстильных выставок и позиционируем себя как лидеры индустрии с инновационным и современным взглядом на выбор тканей от лучших мировых производителей, стараемся регулярно обновлять коллекции самыми лучшими и прогрессивными материалами. 
               </p>
             </div>
           </div>
