--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -15,20 +15,27 @@ import "../main.css";
           <div class="address">
             <img src="/icons/location.svg" alt="Адрес" width="24" height="24" />
             <p>
-              108811 г. Москва, поселение Московский, 22-й км. Киевского шоссе, двлд. 4, с. 5, корпус E<br />
-              23-й подъезд, 9-й этаж, офис 901/д.<br />
-              Бизнес-Парк "Румянцево"
+
+              127238 г. Москва, Дмитровское шоссе 71Б, Западное Дегунино, Северный (САО)<br />
+              Бизнес-Центр "ONE"<br />
+              Метро: Верхние Лихоборы<br />
             </p>
           </div>
 
           <div class="phone">
             <img src="/icons/phone.svg" alt="Телефон" width="24" height="24" />
-            <a href="tel:+74954070691">+7 (495) 407-06-91</a>
+            <a href="tel:+7(495)2213316">+7 (495) 221 - 33 - 16</a>
+            <a href="tel:+7(903)2213316">+7 (903) 221 - 33 - 16</a>
           </div>
 
           <div class="email">
             <img src="/icons/mail.svg" alt="Email" width="24" height="24" />
-            <a href="mailto:promo@valenciatex.com">promo@valenciatex.com</a>
+            <a class="-text l link" href="mailto:firma.nortex@gmail.com"
+            >firma.nortex@gmail.com</a
+            >
+            <a class="-text l link" href="mailto:info@tkani-nortex.ru"
+              >info@tkani-nortex.ru</a
+            >
           </div>
         </div>
 
