--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,20 +31,13 @@ import Advantages from "../components/Advantages.astro";
 	<Categories client:only showEmail={false} />
 	<div class="container">
 		<div class="text">
-			Компания Валенсия, вот уже более 7 лет занимается поставкой декоративных тканей
-			для штор, негорючих и скатертных тканей на Российском рынке. Наши клиенты это салоны
-			штор, дизайн студии, архитектурные бюро, магазины тканей, а также частные
-			профессиональные декораторы и дизайнеры интерьеров.
+			Наши сотрудники имеют более 20-ти летний опыт продаж тканей на Российский рынок. Наши клиенты это крупные производства, частные дизайнеры и декораторы, дизайнерские студии, архитектурные бюро, государственные заказы. Имеем огромный ассортимент лучших мировых тканей для мебели и штор, таких как велюр, замша, микрофибра, экокожа, рогожка, негорючие ткани, мировые тренды, уличные ткани outdoor, Trevira CS с нитью из полиэстера, шенилл, ткани с рисунком, букле, шерсть, лен, хлопок, бархат, мех, ткани с сертификатом AVIO/IMO, блэкаут, тюль и многие другие с широким спектром цветов. 
 		</div>
 		<div class="text">
-			Отдельное направление в нашей компании занимает рулонная продажа тканей напрямую
-			с фабрик по фабричным ценам. Это особенно интересно салонам штор
-			и магазинам тканей, имеющим свой склад и занимающимся продажей тканей из наличия.
+			Наша главная задача быть уверенными в высоко-технологичности, безупречном качестве продукции и широком спектре цветов, а также соответствовать высочайшим стандартам качества и обслуживания, успешно реализовать даже самые сложные запросы клиентов.
 		</div>
 		<div class="text">
-			Наша компания оказывает полный сервис
-			по привозу тканей в Россию. Вы имеете возможность, по желанию, заказать ткань
-			у нас, как с доставкой в Россию, так и напрямую с фабрики в Испании или Италии.
+			Помимо тканей поставляем фурнитуру для мебели в виде ножек и мебельных деталей. Для удобства предлагаем продажу тканей по рулонам или отрезам в метрах, располагаем складом и гибкой доставкой. У нас Вы можете найти ткань на любой вкус и цвет, выбрать необходимую ценовую категорию и страну производителя. Являемся лидерами и новаторами индустрии.
 		</div>
 	</div>
 
@@ -52,7 +45,8 @@ import Advantages from "../components/Advantages.astro";
 
 <style scoped>
 	.text {
-		font-size: 20px;
+		font-size: 16px;
+		max-width: 1800px;
 		line-height: 32px;
 		@media (max-width: 768px) {
 			line-height: 22px;
