--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -40,15 +40,21 @@ import "../main.css";
         </div>
 
         <div class="map">
-          <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.6544!2d37.4238!3d55.6335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTXCsDM4JzAwLjYiTiAzN8KwMjUnMjUuNyJF!5e0!3m2!1sru!2sru!4v1620000000000!5m2!1sru!2sru"
+          <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2145.0481076767146!2d37.54179557238424!3d55.912286503450524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b539f2054abb6d%3A0xa7cb3b1792f19c58!2z0JTQvNC40YLRgNC-0LLRgdC60L7QtSDRiC4sIDcx0LEsIE1vc2t2YSwgS3JpZXZpamEsIDEyNzQ5NQ!5e0!3m2!1slv!2slv!4v1740513784759!5m2!1slv!2slv" 
+            style="border:0;"
+            allowfullscreen=""
             width="100%" 
             height="450" 
-            style="border:0;" 
-            allowfullscreen="" 
-            loading="lazy">
-          </iframe>
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe> -->
+          <iframe 
+          src="https://yandex.ru/map-widget/v1/?ll=37.541722,55.857771&z=16&text=Нортекс%2C%20магазин%20тканей%2C%20Москва%2C%20Дмитровское%20шоссе%2C%2071Б"
+            width="100%" 
+            height="450" 
+            allowfullscreen="true" style="border: 1px solid #ccc;"></iframe>
         </div>
+
       </div>
 </BaseLayout>
 
